testcases/pos/batch/higher_order_input.bard
let fun apply(f, x) = f(x)
    fun g(i) = i + 1
in
    apply(g, 41)
end
