testcases/neg/eval/pass_lambda_non_anno_to_anno.bard
let fun apply(f: (Int) => Int, x: Int): Int = f(x)
    fun g(y) = y + 1
in
    apply(g, 41)
end
